--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -1,5 +1,5 @@
 .Nav{
-    background: #15171c;
+    background: #3f3f3f;
     height: 80px;
     display: flex;
     align-items: center;
@@ -20,7 +20,7 @@
 
 .SidebarLink { 
   display: flex;
-  color: #e1e9fc;
+  color: #eaeaee;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
@@ -31,7 +31,8 @@
 }
 
 .SidebarLink a:hover{
-    background: #252831;
-    border-left: 4px solid #632ce4;
+    background: #9a9ca5;
+    border-left: 4px solid #a11510;
     cursor: pointer;
+    color: #a11510;
 }
