--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -18,6 +18,13 @@
     width: 100%;
 }
 
+.SidebarWrap a:hover{
+    background: #9a9ca5;
+    border-left: 4px solid #a11510;
+    cursor: pointer;
+    color: #a11510;
+}
+
 .SidebarLink { 
   display: flex;
   color: #eaeaee;
