--- a/src/css/Spinner.css
+++ b/src/css/Spinner.css
@@ -21,7 +21,7 @@
     display: block;
     width: 25%;
     height: 25%;
-    background-color: #D32F2F;
+    background-color: #a11510;
     border-radius: 100%;
     animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
     text-align: middle;
