--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -15,6 +15,7 @@
 }
 
 .SidebarWrap{
+    background: #3f3f3f;
     width: 100%;
 }
 
@@ -35,6 +36,7 @@
   height: 60px;
   text-decoration: none;
   font-size: 18px;
+  background: #3f3f3f;
 }
 
 .SidebarLink a:hover{
