--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -83,7 +83,8 @@ a {
   color: var(--blanco);
 }
 .btn-primario:hover {
-  background: var(--gris3);
+  background: var(--negro);
+  color: var(--blanco)
 }
 .btn-secundario {
   background-color: var(--gris1);
