--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -16,7 +16,8 @@
 
 .SidebarWrap{
     background: #3f3f3f;
-    width: 100%;
+    width: 200%;
+    justify-content: flex-start;
 }
 
 .SidebarWrap a:hover{
