--- a/src/css/tabscss.module.css
+++ b/src/css/tabscss.module.css
@@ -4,38 +4,42 @@
 
 .tabsHeading {
   display: flex;
-  justify-content: flex-end;
+  justify-content: left;
   margin-bottom: 1px;
 }
 
 .tab {
   display: inline-flex;
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 200;
   color: #000;
+  font-weight: bold;
   padding: 3px 15px;
-  margin: 0 2px;
+  margin: 2px 4px;
   line-height: 20px;
   transition: all 200ms cubic-bezier(0.4, 0.14, 0.3, 1);
   text-transform: capitalize;
-  border: 0.5px solid;
   cursor: pointer;
 }
 
 .tab:hover {
-  background-color: #e0f7fa;
+  border-bottom: 4px solid #a11510;
+  cursor: pointer;
+  color:#a11510;
+  font-weight: bold;
+  background-color: #9a9ca5;
 }
 
 .active {
+  border-bottom: 4px solid #a11510;
   cursor: pointer;
-  border-color: #000;
-  background-color: #3776d1;
-  color: #fff;
+  color:#a11510;
+  font-weight: bold;
 }
 
 .active:hover {
-  background-color: #3776d1;
+  background-color: #9a9ca5;
 }
 
 .disabled {
