--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,16 +1,3 @@
-/*.containerPrincipal{
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border: 1px solid blue;
-  padding: 40px;
-  background-color: white;
-}
-
-.containerLogin{
-  text-align: center;
-}*/
 
 :root {
   --blanco: #ffffff;
@@ -170,7 +157,6 @@ aside  {
   margin-right: 2rem;
 }
 
-/** Formulario crear y editar tareas **/
 .formulario {
   background-color: var(--gris3);
   padding: 4rem;
@@ -194,28 +180,7 @@ aside  {
   width: 100%;
 }
 
-/** TAREAS LISTADO **/
-.contenedor-tareas {
-  padding: 4rem;
-}
 
-
-
-.listado-tareas {
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.tarea {
-  display: flex;
-  justify-content: space-between;
-  background-color: var(--blanco);
-  padding: .5rem 2rem;
-  align-items: center;
-  margin-bottom: 1rem;
-  border-radius: .5rem;
-
-}
 .sombra {
   -webkit-box-shadow: 0px 4px 10px -3px rgba(117,117,117,1);
   -moz-box-shadow: 0px 4px 10px -3px rgba(117,117,117,1);
@@ -339,6 +304,7 @@ aside  {
   border: 1px solid #e1e1e1;
   padding: 1rem;
   flex: 1;
+  margin-left: 5px;
 }
 
 .enlace-cuenta {
