--- a/src/css/Pagination.css
+++ b/src/css/Pagination.css
@@ -3,28 +3,34 @@
     display: flex;
     list-style: none;
     outline: none;
+    border-radius: 5px;
   }
   .pagination > .active > a{
-    background-color: #47ccde ;
-    border-color: #47ccde ;
+    background-color: #3f3f3f ;
+    border-color: #3f3f3f ;
     color: #fff;
+    border-radius: 5px;
   }
   .pagination > li > a{
-    border: 1px solid #47ccde ;
+    border: 1px solid #3f3f3f ;
     padding: 5px 10px;
     outline: none;
     cursor: pointer;
+    border-radius: 5px;
   }
   .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
-    background-color: #47ccde ;
-    border-color: #47ccde;
+    background-color: #3f3f3f ;
+    border-color: #3f3f3f;
     outline: none ;
+    border-radius: 5px;
   }
   .pagination > li > a, .pagination > li > span{
-    color: #47ccde
+    color: #3f3f3f;
+    border-radius: 5px;
   }
   .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
-    border-radius: unset
+    border-radius: unset;
+    border-radius: 5px;
   }
 
 
