--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -5,7 +5,7 @@
   --gris2: #2f3848;
   --gris3: #1a202d;
   --negro: #000000;
-  --headingFont:'Raleway', sans-serif;
+  --headingFont: 'Open Sans', sans-serif;
   --textFont:  'Roboto', sans-serif;
 }
 *, *:before, *:after {
